package cafeteria.products;

public interface Product {
  Double getPrice();
  String getDescription();
  void prepare();
}
